<?xml version="1.0"?>
<package>
  <name>simple_heap</name>
  <version>1.0.0</version>
  <description>The simple_heap for motoman sda10f controll using direct Joint Trajectory Action and Moveit Library approach</description>
  
  <maintainer email="durovsky987@gmail.com">durovsky</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf</build_depend>
  
    
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>   
  <run_depend>tf</run_depend>
    
</package>